Modified the file system

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-WEATHER_API_KEY="11880f3c706c43e9be1170935242504"
+WEATHER_API_KEY=""
+PORT=3000
+EMAIL_SERVICE= "gmail"
+EMAIL_USER="niteshgitactions@gmail.com"
+EMAIL_PASS="Welcome@1"
