--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "name": "weather-app-backend",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.14"
   },
   "scripts": {
     "start": "node server.js"
+  }
 }
-
-}
-
